# sfexpress-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  start.sh
api/: admin.py  middleware.py  models.py  urls.py  views.py
api/management/commands/: load_sample_data.py  load_sfexpress_data.py  setup_admin.py
api/migrations/: 0001_initial.py
api/templates/api/: base.html  dashboard.html  home.html  login.html  register.html
docs/: DATA_LOADING.md  DEPLOYMENT.md  EXAMPLES.md  README.md  SF Business Station.html  SF Locker.html  SF Store.html
sfexpress_api/: asgi.py  settings.py  urls.py  wsgi.py
