[project]
name = "sfexpress-api"
version = "1.0.0"
description = "API for SF Express locker and shop locations with authentication and credit system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2,<5.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
